--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -8,62 +8,58 @@
     android:fitsSystemWindows="true"
     tools:context=".ImageActivity">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/content_image"
+    <ScrollView
+        android:id="@+id/screen"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="@dimen/activity_margin">
+        android:layout_height="match_parent">
 
-        <ScrollView
-            android:id="@+id/screen"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="@dimen/edited_image_size"
+                android:layout_height="@dimen/edited_image_size"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="@dimen/inner_margin"
+                android:background="@color/colorPrimary"
+                android:contentDescription="@string/app_name"
+                app:srcCompat="@mipmap/ic_launcher" />
 
-                <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="@dimen/edited_image_size"
-                    android:layout_height="@dimen/edited_image_size"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_margin="@dimen/inner_margin"
-                    android:background="@color/colorPrimary"
-                    app:srcCompat="@mipmap/ic_launcher" />
+            <blog.photo.buildalbum.utils.ExpandableHeightGridView
+                android:id="@+id/gridViewFrames"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:columnWidth="110dp"
+                android:gravity="center"
+                android:horizontalSpacing="5dp"
+                android:isScrollContainer="false"
+                android:numColumns="auto_fit"
+                android:stretchMode="spacingWidthUniform"
+                android:verticalSpacing="20dp" />
 
-                <blog.photo.buildalbum.utils.ExpandableHeightGridView
-                    android:id="@+id/gridViewFrames"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:columnWidth="110dp"
-                    android:gravity="center"
-                    android:horizontalSpacing="5dp"
-                    android:isScrollContainer="false"
-                    android:numColumns="auto_fit"
-                    android:stretchMode="spacingWidthUniform"
-                    android:verticalSpacing="20dp" />
+        </LinearLayout>
 
-            </LinearLayout>
+    </ScrollView>
 
-        </ScrollView>
-
-    </RelativeLayout>
-
-    <ProgressBar
-        android:id="@+id/progressBarImageScreen"
+    <LinearLayout
+        android:id="@+id/progressSpinner"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:progressDrawable="@drawable/progress_bar_circular"
-        android:visibility="gone" />
+        android:visibility="gone">
+
+        <include layout="@layout/spinner_layout" />
+
+    </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabTop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
+        android:layout_marginEnd="@dimen/fab_margin4"
         android:layout_marginRight="@dimen/fab_margin4"
         android:layout_marginBottom="@dimen/fab_margin1"
         android:scaleType="center"
@@ -74,6 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
+        android:layout_marginEnd="@dimen/fab_margin3"
         android:layout_marginRight="@dimen/fab_margin3"
         android:layout_marginBottom="@dimen/fab_margin1"
         android:scaleType="center"
@@ -84,6 +81,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
+        android:layout_marginEnd="@dimen/fab_margin2"
         android:layout_marginRight="@dimen/fab_margin2"
         android:layout_marginBottom="@dimen/fab_margin1"
         android:scaleType="center"
