--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:fitsSystemWindows="true"
     tools:context=".LoginActivity">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -16,11 +16,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
+            android:layout_marginTop="@dimen/text_margin_top"
+            android:gravity="center_horizontal"
             android:text="@string/app_info"
             android:textColor="@color/colorPrimary"
-            android:textSize="44dp"
+            android:textSize="@dimen/text_size"
             android:textStyle="bold" />
 
         <ImageView
@@ -28,7 +28,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="@dimen/logo_margin_top"
+            android:contentDescription="@string/app_name"
             app:srcCompat="@mipmap/ic_launcher_round" />
 
     </RelativeLayout>
