--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -32,13 +32,13 @@
                 android:id="@+id/gridViewFrames"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:columnWidth="110dp"
+                android:columnWidth="@dimen/grid_column_width"
                 android:gravity="center"
-                android:horizontalSpacing="5dp"
+                android:horizontalSpacing="@dimen/grid_spacing_horizontal"
                 android:isScrollContainer="false"
                 android:numColumns="auto_fit"
                 android:stretchMode="spacingWidthUniform"
-                android:verticalSpacing="20dp" />
+                android:verticalSpacing="@dimen/grid_spacing_vertical" />
 
         </LinearLayout>
 
