--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -19,12 +19,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="@dimen/inner_margin"
-            android:columnWidth="110dp"
+            android:columnWidth="@dimen/grid_column_width"
             android:gravity="center"
-            android:horizontalSpacing="5dp"
+            android:horizontalSpacing="@dimen/grid_spacing_horizontal"
             android:numColumns="auto_fit"
             android:stretchMode="spacingWidthUniform"
-            android:verticalSpacing="20dp" />
+            android:verticalSpacing="@dimen/grid_spacing_vertical" />
 
         <ImageView
             android:id="@+id/imageViewCamera"
