--- a/app/src/main/res/layout/image_layout.xml
+++ b/app/src/main/res/layout/image_layout.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/picture"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="@dimen/grid_image_size"
+        android:layout_height="@dimen/grid_image_size"
         android:layout_gravity="center_horizontal"
         android:background="@color/colorPrimary"
         app:srcCompat="@mipmap/ic_launcher" />
