Set FAB icon color and size

--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -62,7 +62,8 @@
         android:layout_marginEnd="@dimen/fab_margin4"
         android:layout_marginRight="@dimen/fab_margin4"
         android:layout_marginBottom="@dimen/fab_margin1"
-        android:scaleType="center"
+        android:tint="@color/colorYellow"
+        app:maxImageSize="@dimen/fab_icon_max_size"
         app:srcCompat="@android:drawable/ic_menu_upload" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -73,7 +74,8 @@
         android:layout_marginEnd="@dimen/fab_margin3"
         android:layout_marginRight="@dimen/fab_margin3"
         android:layout_marginBottom="@dimen/fab_margin1"
-        android:scaleType="center"
+        android:tint="@color/colorYellow"
+        app:maxImageSize="@dimen/fab_icon_max_size"
         app:srcCompat="@android:drawable/ic_menu_share" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -84,7 +86,8 @@
         android:layout_marginEnd="@dimen/fab_margin2"
         android:layout_marginRight="@dimen/fab_margin2"
         android:layout_marginBottom="@dimen/fab_margin1"
-        android:scaleType="center"
+        android:tint="@color/colorYellow"
+        app:maxImageSize="@dimen/fab_icon_max_size"
         app:srcCompat="@android:drawable/ic_menu_rotate" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -93,7 +96,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin1"
-        android:scaleType="center"
+        android:tint="@color/colorYellow"
+        app:maxImageSize="@dimen/fab_icon_max_size"
         app:srcCompat="@android:drawable/ic_menu_delete" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
