--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <resources>
     <dimen name="activity_margin">0dp</dimen>
     <dimen name="edited_image_size">400dp</dimen>
+    <dimen name="fab_icon_max_size">48dp</dimen>
     <dimen name="fab_margin1">16dp</dimen>
     <dimen name="fab_margin2">80dp</dimen>
     <dimen name="fab_margin3">144dp</dimen>
