--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorYellow"
-    android:fitsSystemWindows="true"
-    tools:context=".ImageActivity">
+    android:fitsSystemWindows="true">
 
     <ScrollView
         android:id="@+id/screen"
@@ -19,7 +17,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/signalImageView"
                 android:layout_width="@dimen/edited_image_size"
                 android:layout_height="@dimen/edited_image_size"
                 android:layout_gravity="center_horizontal"
@@ -28,10 +26,11 @@
                 android:contentDescription="@string/app_name"
                 app:srcCompat="@mipmap/ic_launcher" />
 
-            <blog.photo.buildalbum.utils.ExpandableHeightGridView
-                android:id="@+id/gridViewFrames"
+            <blog.photo.buildalbum.layout.ExpandableHeightGridView
+                android:id="@+id/panesGridView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="@dimen/inner_margin"
                 android:columnWidth="@dimen/grid_column_width"
                 android:gravity="center"
                 android:horizontalSpacing="@dimen/grid_spacing_horizontal"
@@ -55,49 +54,42 @@
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabTop"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginEnd="@dimen/fab_margin4"
-        android:layout_marginRight="@dimen/fab_margin4"
-        android:layout_marginBottom="@dimen/fab_margin1"
-        android:tint="@color/colorYellow"
-        app:maxImageSize="@dimen/fab_icon_max_size"
-        app:srcCompat="@android:drawable/ic_menu_upload" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabShare"
+        android:id="@+id/fabBottomSingle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="@dimen/fab_margin3"
         android:layout_marginRight="@dimen/fab_margin3"
         android:layout_marginBottom="@dimen/fab_margin1"
-        android:tint="@color/colorYellow"
-        app:maxImageSize="@dimen/fab_icon_max_size"
-        app:srcCompat="@android:drawable/ic_menu_share" />
+        android:src="@drawable/ic_vertical_bottom_24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:maxImageSize="@dimen/fab_icon_max_size" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabRotate"
+        android:id="@+id/fabEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="@dimen/fab_margin2"
         android:layout_marginRight="@dimen/fab_margin2"
         android:layout_marginBottom="@dimen/fab_margin1"
-        android:tint="@color/colorYellow"
-        app:maxImageSize="@dimen/fab_icon_max_size"
-        app:srcCompat="@android:drawable/ic_menu_rotate" />
+        android:src="@drawable/ic_edit_24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:maxImageSize="@dimen/fab_icon_max_size" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabDelete"
+        android:id="@+id/fabTopSingle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin1"
-        android:tint="@color/colorYellow"
-        app:maxImageSize="@dimen/fab_icon_max_size"
-        app:srcCompat="@android:drawable/ic_menu_delete" />
+        android:layout_marginEnd="@dimen/fab_margin1"
+        android:layout_marginRight="@dimen/fab_margin1"
+        android:layout_marginBottom="@dimen/fab_margin1"
+        android:src="@drawable/ic_vertical_top_24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:maxImageSize="@dimen/fab_icon_max_size" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
