--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -5,7 +5,6 @@
     android:id="@+id/content_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
     tools:showIn="@layout/activity_main">
 
     <LinearLayout
@@ -14,7 +13,7 @@
         android:orientation="vertical">
 
         <GridView
-            android:id="@+id/girdViewImages"
+            android:id="@+id/imagesGridView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="@dimen/inner_margin"
@@ -26,7 +25,7 @@
             android:verticalSpacing="@dimen/grid_spacing_vertical" />
 
         <ImageView
-            android:id="@+id/imageViewCamera"
+            android:id="@+id/mainImageView"
             android:layout_width="@dimen/edited_image_size"
             android:layout_height="@dimen/edited_image_size"
             android:layout_gravity="center_horizontal"
