--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,10 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="edited_image_size">400dp</dimen>
     <dimen name="fab_icon_max_size">48dp</dimen>
     <dimen name="fab_margin1">16dp</dimen>
     <dimen name="fab_margin2">80dp</dimen>
     <dimen name="fab_margin3">144dp</dimen>
-    <dimen name="fab_margin4">208dp</dimen>
     <dimen name="grid_column_width">110dp</dimen>
     <dimen name="grid_image_size">100dp</dimen>
     <dimen name="grid_spacing_horizontal">5dp</dimen>
